Making the api key interface work. Created a Snack component. Created Modal components. Corrected some bugs in the controllers.
